# compras

./: .gitignore  README.md  banco_dados.db  index.html  main.py  pyproject.toml
api/dependencies/routers/: app.py
api/routers/: app.py
app/: database.py  main.py  models.py
app/db/: database.py  tabela_login.py  tabela_produtos.py
app/models/: Login.py  Produtos.py  rotas_login.py  rotas_produtos.py
app/routers/: api.py  login.py  produtos.py
app/tests/integration/: test_router_async.py
db/: lista_de_compras.py
models/schemas/: produto.py
my-app/: package-lock.json
my-app/components/: cabecalho-e-rodape.js
my-app/pages/: index.js
tests/integration/: test_router_async.py
