[tool.poetry]
name = "compras"
version = "0.1.0"
description = ""
authors = ["mariannabaldez <marianna.baldez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
fastapi = "^0.75.1"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.35"
databases = "^0.5.5"
aiosqlite = "^0.17.0"
pytest = "^7.1.2"
httpx = "^0.22.0"
trio = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
